--- a/FRONTEND/src/Pages/Home/Home.css
+++ b/FRONTEND/src/Pages/Home/Home.css
@@ -1,32 +1,35 @@
 @media (min-width: 600px) {
     .CardProductGrid {
-      display: inline-block;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      /* justify-content: space-evenly;  */
+       /* grid-template-columns:repeat(auto-fit,minmax(225px  ,250px));  */
+       /* grid-template-columns:30% 30% 30%;
+      justify-content: space-evenly; 
+      /* gap:20px; */
+    }
+
+    .CardProductMobileGrid {
+      display: none;
       grid-template-columns: repeat(3, 1fr);
-      justify-content: flex-start;
-      flex-direction: 'row';
-      margin: 5px;
-      /* grid-auto-rows: 200px; */
+      /* grid-auto-rows: 200px;  */
     }
   }
   
   @media (max-width: 600px) {
+    .CardProductMobileGrid {
+      display: flex;
+      flex-direction: column; 
+      /* grid-template-columns: repeat(1, 20vw); 
+      grid-template-rows: repeat(1, 20vw); */
+      /* grid-auto-rows: 200px;  */
+
+    }
     .CardProductGrid {
       display: none;
       grid-template-columns: repeat(3, 1fr);
-      /* grid-auto-rows: 200px;  */
-    }
-  }
-  @media (min-width: 600px) {
-    .CardProductSmallGrid {
-      display: none;
-      grid-template-columns: repeat(3, 1fr);
-      /* grid-auto-rows: 200px;  */
-    }
-  }
-  @media (max-width: 600px) {
-    .CardProductSmallGrid {
-      display: flex;
-      grid-template-columns: repeat(3, 1fr);
+      gap:10px;
       /* grid-auto-rows: 200px;  */
     }
   }
@@ -41,4 +44,16 @@
     font-family: var(--font1) ;
     font-size: xx-large;
     flex-grow: 1;
+  }
+
+  .offersPage{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+    min-height: 70em;
+    border-radius: 1.5em 1.5em 0 0;
+    background-color: #fcfcfc;
+    margin-top: 11.7em;
+  
   }
