--- a/FRONTEND/src/Pages/OfferDetails/OfferDetails.css
+++ b/FRONTEND/src/Pages/OfferDetails/OfferDetails.css
@@ -1,112 +1,84 @@
-@media (min-width:600px) { 
 
-    .OD-container{
-        margin: 30px;
-        display: grid;
-        grid-template-columns: 40% 60%;
-        border: 1px solid ;
-        border-radius: 8px;
-    }
-    
-    .OD-image-box{
-        
-        margin-right: 20px;
-    }
-    
-    .OD-image-box img{
-        height: 20vw;
-        width: 100%;
-        object-fit: contain;
-        border: 1px solid ;
-        border-radius: 8px;
-        
-    
-    }
-    
-    .OD-image{
-        object-fit: contain;
-    
-    }
-    
-    
-    .OD-details-box{
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: 1px solid ;
-        border-radius: 8px;
-        box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-        
-    }
-    
-    .OD-details-box h1{
-        font-size: 3vw;
-        margin: 0px 0px 0px 0px;;
-        vertical-align: text-top;
-        text-align: center;
-    
-        
-    }
-    
-    .OD-details-box Button{
-        width: 50%;
-        margin: auto;
-        margin-bottom: 3px;
-        
-    }
-    
-    .OD-details-box Button:active {
-        background-color: #085066;
-        transform: scale(0.98);
-        /* Scaling button to 0.98 to its original size */
-        box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
-        /* Lowering the shadow */
-        /* box-shadow: 0 5px #666; */
-        /* transform: translateY(4px); */
-      }
-
-    .OD-cart-button{
-        display: flex;
-        position: absolute;
-
-    }
-    .ButtonShop{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
-
-
-}
-
-
-    @media (max-width:600px) { 
+ 
+ @media (max-width:600px) { 
 
         .OD-container{
-            
-            height: 90vw;
-            margin: 20px;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
-            border: 1px solid ;
-            border-radius: 8px;
+            min-height: 50em;
+            font-family: var(--font1);
+            padding-bottom: 7em;
+        }
+        .OD-title{
+            width: 90%;
+            min-height: 6em;
+            font-size: 1em;
+            margin: 0px;
+            
         }
         
         .OD-image-box{
-            width: 100%;
+            width: 90%;
             height: 50vw;
+            margin-top: 2em;
         }
         
         .OD-image-box img{
             /* object-fit: contain; */
-            border: 1px solid ;
-            border-radius: 8px;
             width: 100%;
             height: 100%;
         
+        }
+
+        .OD-separator{
+            width: 100%;
+        }
+
+        .OD-price-line{
+            position: relative;
+            width: 90%;
+            height: 3em;    
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        .OD-description-box{
+            width:90%;
+        }
+
+        
+        .OD-description-box button{
+           font-size: 20px;
+        }
+
+        .OD-price-line h2{
+            position: absolute;
+            display: flex;
+            justify-content:center ;
+            align-items: center;
+            right: 0em;
+        }
+
+        .OD-price-line h1{
+            /* font-size: 2em; */
+            margin: 0px 0px 0px 0px;;
+            /* vertical-align: text-top; */
+        
+            
+        }
+
+        .OD-separator span{
+            display: flex;
+            width: 100%;
+            height: 10px;
+            background-color: rgb(239, 239, 239); 
+            margin-top: 2em;
+            margin-bottom: 2em;
+            box-shadow: -2px 0px 36px -38px rgba(0,0,0,0.75) inset;
+            -webkit-box-shadow: -2px 0px 36px -38px rgba(0,0,0,0.75) inset;
+            -moz-box-shadow: -2px 0px 36px -38px rgba(0,0,0,0.75) inset;
         }
         
         .OD-image{
@@ -121,27 +93,13 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            border: 1px solid ;
-            border-radius: 8px;
-            box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-            min-height: 30vw;
+            align-items: center;
+
+            /* min-height: 15em; */
             
         }
         
-        .OD-details-box h1{
-            font-size: 3vw;
-            margin: 0px 0px 0px 0px;;
-            vertical-align: text-top;
         
-            
-        }
-        
-        .OD-details-box Button{
-          
-            margin: auto;
-            margin-bottom: 3px;
-            
-        }
         
         .OD-details-box Button:active {
             background-color: #085066;
@@ -153,12 +111,83 @@
             /* transform: translateY(4px); */
           }
 
-          .ButtonShop{
+          .OD-details-box button{
+            font-size: 20px ;
             display: flex;
             flex-direction: row;
-            justify-content: space-evenly;
-            width: 50%;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            margin-top: 4em ;
+            /* margin-bottom: 5em; */
         }
     
     }
 
+
+
+
+    @media (min-width:600px) { 
+
+        .OD-container{
+            padding: 20px;
+            display: grid;
+            /* flex-direction: column;
+            align-items: center;
+            min-height: 50em; */
+            grid-template-areas: 
+            "OD-image-box OD-details-box OD-details-box"
+            "OD-image-box OD-details-box OD-details-box"
+            ". OD-description-box OD-description-box"
+            ". OD-description-box OD-description-box"
+            ;
+        }
+
+        .OD-title{
+            display: flex;
+            flex-direction: column;
+            align-items: center;     
+        }
+
+        .OD-image-box{
+            grid-area: OD-image-box;
+            width: 100%;
+            height: 100%;
+            padding: 20px;
+        }
+        
+        .OD-image-box img{
+            /* object-fit: contain; */
+            width: 100%;
+            max-height: 80vh;
+            
+        
+        }
+
+        .OD-details-box{
+            padding: 15px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;     
+        }
+
+        .OD-details-box button{
+            width: 100%;
+            font-size: 20px ;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            margin-top: 4em ;
+        }
+
+        .OD-details-box Button:active {
+            background-color: #085066;
+            transform: scale(0.98);
+            box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+
+        }
+
+    }
