--- a/FRONTEND/src/Pages/OfferDetails/OfferDetails2.css
+++ b/FRONTEND/src/Pages/OfferDetails/OfferDetails2.css
@@ -5,8 +5,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        border: 1px solid ;
-        border-radius: 8px;
     }
     
     .OD-image-box{
@@ -40,7 +38,7 @@
     }
     
     .OD-details-box h1{
-        font-size: 3vw;
+        /* font-size: 3vw; */
         margin: 0px 0px 0px 0px;;
         vertical-align: text-top;
     
